--- a/Dyplom/dodatekA.tex
+++ b/Dyplom/dodatekA.tex
@@ -112,7 +112,7 @@ SUPER_ADMIN_PASSWORD: superadmin_password123
 SUPER_ADMIN_PHONE: 111111111
 \end{lstlisting}
 
-\textbf{Opis pól do konfiguracji:}
+Opis pól do konfiguracji:
 \begin{itemize}
     \item \texttt{SPRING\_MAIL\_HOST}, \texttt{SPRING\_MAIL\_PORT} -- domyślne wartości dla serwera SMTP usługi Gmail.
     \item \texttt{SPRING\_MAIL\_USERNAME}, \texttt{SPRING\_MAIL\_PASSWORD} -- dane logowania do konta Gmail, które będzie wykorzystywane do wysyłania wiadomości e-mail. Wartości te należy uzupełnić własnym adresem e-mail i hasłem (lub hasłem aplikacji).
