--- a/Dyplom/rozdzial04.tex
+++ b/Dyplom/rozdzial04.tex
@@ -1,9 +1,9 @@
 \chapter{Podsumowanie pracy}
 
-Niniejsza praca dyplomowa przedstawia proces projektowania i implementacji systemu „Harmony Home Net” – aplikacji typu eBOK dedykowanej wspólnotom mieszkaniowym. Głównym celem projektu było stworzenie rozwiązania wspierającego zarządzanie wspólnotami, komunikację pomiędzy mieszkańcami a administracją oraz automatyzację kluczowych procesów związanych z obsługą nieruchomości. Poniżej podsumowano kluczowe aspekty realizacji tego przedsięwzięcia.
+W niniejszej pracy opisano proces projektowania i implementacji systemu „Harmony Home Net” – aplikacji typu eBOK adresowanej do wspólnot mieszkaniowych. Głównym celem projektu było stworzenie rozwiązania informatycznego wspierającego zarządzanie wspólnotami, komunikację pomiędzy mieszkańcami a administracją oraz automatyzację kluczowych procesów związanych z obsługą nieruchomości. \\[-10pt]
 
-\section{Zakres i wynik projektu}
-W pracy przedstawiono pełny cykl życia oprogramowania, począwszy od analizy wymagań funkcjonalnych i niefunkcjonalnych, poprzez projektowanie architektury, aż po implementację i testy prototypu. System został zaprojektowany w oparciu o nowoczesne technologie, takie jak:
+\noindent\textbf{Zakres i wynik projektu}\newline
+\noindent W pracy przedstawiono pełny cykl życia oprogramowania, począwszy od analizy wymagań funkcjonalnych i niefunkcjonalnych, poprzez projektowanie architektury, aż po implementację i testy prototypu. System został zaprojektowany w oparciu o nowoczesne technologie, takie jak:
 \begin{itemize}
     \item \textbf{Backend:} Spring Boot -- zapewniający elastyczność, bezpieczeństwo i wydajność aplikacji,
     \item \textbf{Frontend:} Next.js -- umożliwiający responsywność interfejsu i optymalizację SEO,
@@ -21,8 +21,8 @@ Stworzony system oferuje szereg funkcji dostosowanych do potrzeb mieszkańców, 
     \item \textbf{Forum mieszkańców} -- Uproszczona platforma komunikacji wspólnoty.
 \end{itemize}
 
-\section{Wnioski}
-System „Harmony Home Net” stanowi solidną bazę do rozwoju nowoczesnych aplikacji wspierających obsługę wspólnot mieszkaniowych. Realizacja tego projektu umożliwiła zdobycie praktycznych umiejętności w zakresie projektowania systemów informatycznych, integracji zewnętrznych usług oraz testowania oprogramowania. Ponadto, prototyp spełnia swoje założenia projektowe i jest gotowy do dalszego rozwijania w kierunku pełnoprawnej aplikacji produkcyjnej, która może znacząco poprawić efektywność zarządzania wspólnotami mieszkaniowymi. Rozwój ten może nastąpić w kilku kluczowych obszarach:
+\noindent\textbf{Wnioski}\newline
+Stworzony system stanowi solidną bazę do rozwoju nowoczesnych aplikacji wspierających obsługę wspólnot mieszkaniowych. Realizacja tego projektu umożliwiła zdobycie praktycznych umiejętności w zakresie projektowania systemów informatycznych, integracji zewnętrznych usług oraz testowania oprogramowania. Ponadto, prototyp spełnia swoje założenia projektowe i jest gotowy do dalszego rozwijania w kierunku pełnoprawnej aplikacji produkcyjnej, która może znacząco poprawić efektywność zarządzania wspólnotami mieszkaniowymi. Rozwój ten może nastąpić w kilku kluczowych obszarach:
 \begin{itemize}
     \item pełna integracja z zewnętrznymi systemami, np. bankowości czy urządzeń pomiarowych,
     \item rozbudowa funkcji analitycznych, takich jak generowanie zaawansowanych raportów,
