--- a/Dyplom/Dyplom.tex
+++ b/Dyplom/Dyplom.tex
@@ -996,6 +996,7 @@ Specjalność: & {\bfseries \@specjalnosc}\\
 \appendix
 \include{dodatekA}
 \include{dodatekB}
+\include{dodatekC}
 % LITERATURA (zostanie wygenerowana automatycznie)
 %UWAGA: bibliotekę referencji należy przygotować samemu. Dobrym do tego narzędziem jest JabRef.
 %       JabRef oferuje jednak większą liczbę typów rekordów niż obsługuje BibTeX.
